# miui-updates-tracker

./: .gitignore  .gitmodules  LICENSE  README.md  ao.py  config.yml.example  devices  discordbot.py  pyproject.toml  renovate.json5  requirements.txt  stable.sh  stable_db  stable_db_old  stable_fastboot.sh  stable_fastboot_db  telegram.json  telegram.yml  tracker.py  utils.py  weekly.sh  weekly_db  weekly_db_old  weekly_fastboot.sh  weekly_fastboot_db
.circleci/: config.yml
.github/: dependabot.yml
EOL/: EOL.py  names.json  sf.json  sf.yml  sr.json  sr.yml  wf.json  wf.yml  wr.json  wr.yml
archiver/: README.md  archiver.py  dump_links_from_git.sh
data/: devices.yml  latest.yml
devices/: names.json  names.yml  sf.json  sf.yml  sr.json  sr.yml  wf.json  wf.yml  wr.json  wr.yml
miui_updates_tracker/: __init__.py  __main__.py  tracker_official.py
rss/: HM2013022.xml  HM2013023.xml  HM2014011.xml  HM2014501.xml  HM2014811.xml  HM2014813.xml  agate.xml  air.xml  alioth.xml  amethyst.xml  andromeda.xml  angelica.xml  angelicain.xml  angelican.xml  annibale.xml  apollo.xml  aqua.xml  arctic.xml  ares.xml  aries.xml  aristotle.xml  armani.xml  atom.xml  aurora.xml  babylon.xml  begonia.xml  begoniain.xml  beryl.xml  beryllium.xml  biloba.xml  bixi.xml  blue.xml  bomb.xml  breeze.xml  byron.xml  cactus.xml  camellia.xml  camellian.xml  cancro.xml  cannon.xml  (+282 more)
stable_fastboot/: andromeda.json  andromeda.yml  andromeda_eea_global.json  andromeda_eea_global.yml  andromeda_global.json  andromeda_global.yml  atom.yml  begonia.json  begonia.yml  begonia_eea_global.yml  begonia_global.yml  begonia_id_global.yml  begonia_ru_global.yml  begoniain_in_global.yml  beryllium_global.json  beryllium_global.yml  beryllium_ru_global.json  beryllium_ru_global.yml  bomb.yml  cactus.json  cactus.yml  cactus_global.json  cactus_global.yml  cactus_ru_global.json  cactus_ru_global.yml  cappu.json  cappu.yml  capricorn.json  capricorn.yml  capricorn_global.json  capricorn_global.yml  cepheus.json  cepheus.yml  cepheus_eea_global.json  cepheus_eea_global.yml  cepheus_global.json  cepheus_global.yml  cepheus_ru_global.json  cepheus_ru_global.yml  cereus.json  (+293 more)
stable_recovery/: andromeda.json  andromeda.yml  andromeda_eea_global.json  andromeda_eea_global.yml  andromeda_global.json  andromeda_global.yml  atom.yml  begonia.json  begonia.yml  begonia_eea_global.yml  begonia_global.yml  begonia_id_global.yml  begonia_ru_global.yml  begoniain_in_global.yml  beryllium_global.json  beryllium_global.yml  beryllium_ru_global.json  bomb.yml  (+302 more)
(+2111 files in other folders)
