[tool.poetry]
name = "miui_updates_tracker"
version = "0.1.0"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
sqlalchemy = "^2.0.17"
mysqlclient = "^2.1.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.32.0"
humanize = "^4.6.0"
aiohttp = {extras = ["speedups"], version = "^3.9.2"}
python-telegram-bot = "^21.0.0"
"discord.py" = "^2.3.0"
feedgen = "^1.0.0"
tweepy = "^4.14.0"
facebook-sdk = "^3.1.0"
sshtunnel = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
